# openvino_car_tracker

monitors/: CMakeLists.txt  package.xml
monitors/src/: cpu_monitor.cpp
object_pose/: CMakeLists.txt  package.xml
object_pose/src/: main.cpp
rect_msgs/: CMakeLists.txt  package.xml
rect_msgs/msg/: cvRect.msg
security_barrier_camera/: CMakeLists.txt  package.xml
security_barrier_camera/include/security_barrier_camera/: Detector.hpp  Lpr.hpp  VehicleAttributesClassifier.hpp
security_barrier_camera/launch/: demo.launch
security_barrier_camera/src/: main.cpp
